--- a/library.properties
+++ b/library.properties
@@ -3,8 +3,8 @@ version=4.1.5
 author=abcdaaaaaaaaa
 maintainer=abcdaaaaaaaaa <amertanik@icloud.com>
 sentence=The first and only Arduino library where Geiger Counter and MQ Sensors combine with Data Science
-paragraph=This library supports a wide range of MQ gas sensors (MQ2, MQ3, MQ4, MQ5, MQ6, MQ7, MQ8, MQ9, MQ131, MQ135, MQ136, MQ137, MQ138, MQ214, MQ303A, MQ303B, MQ307A, MQ309A). Calibration is based on gas-specific percentage references rather than per-sensor calibration, allowing for more accurate ppm calculations. Best features: 1) Automatic calculation of a and b coefficients using logarithmic regression, 2) Correction coefficient model for temperature and humidity compensation, 3) Analytical and manual calibration for unsupported MQ models, 4) JavaScript-based implementation for hardware-free computation, 5) Geiger Counter support with radiation metrics like µSv/h and CPM, 6) 3D ppm concentration graph simulation, 7) Python-based 4D ppm slope estimation for advanced data analysis.
+paragraph=This library supports a wide range of MQ gas sensors (MQ2, MQ3, MQ4, MQ5, MQ6, MQ7, MQ8, MQ9, MQ131, MQ135, MQ136, MQ137, MQ138, MQ214, MQ303A, MQ303B, MQ307A, MQ309A). Instead of sensor-specific calibration, it uses gas-specific reference percentages, enabling more accurate ppm calculations. Key features include automatic calculation of 'a' and 'b' coefficients via logarithmic regression; temperature and humidity compensation using a correction coefficient model; analytical and manual calibration support for unsupported MQ models; a JavaScript-based implementation for hardware-free testing and computation; built-in Geiger counter integration with radiation metrics such as µSv/h and CPM; 3D ppm concentration graph simulation; and Python-based 4D ppm slope estimation for advanced data analysis.
 category=Sensors
-url=https://github.com/abcdaaaaaaaaa/MQSpaceData.h
+url=https://github.com/abcdaaaaaaaaa/MQDataScience
 architectures=*
 license=MIT
