--- a/library.properties
+++ b/library.properties
@@ -3,11 +3,12 @@ version=5.1.0
 author=abcdaaaaaaaaa
 maintainer=abcdaaaaaaaaa <amertanik@icloud.com>
 sentence=The first and only Arduino library where MQ Sensors combine with Data Science
-paragraph=This library supports a wide range of MQ gas sensors (MQ-2, MQ-3, MQ-4, MQ-5, MQ-6, MQ-7, MQ-8, MQ-9, MQ131, MQ-131_LOW, MQ-135, MQ-136, MQ-137, MQ-138, MQ-214, MQ-216, MQ303A, MQ303B, MQ306A, MQ307A, MQ309A). Instead of sensor-specific calibration, it uses gas-specific reference percentages, enabling more accurate ppm calculations. Key features include automatic calculation of 'a' and 'b' coefficients via logarithmic regression; temperature and humidity compensation using a correction coefficient model; analytical and manual calibration support for unsupported MQ models; a JavaScript-based implementation for hardware-free testing and computation; 3D ppm concentration graph simulation; and Python-based 4D ppm slope estimation for advanced data analysis.
+paragraph=This library supports a wide range of MQ gas sensors (MQ-2, MQ-3, MQ-4, MQ-5, MQ-6, MQ-7, MQ-8, MQ-9, MQ131, MQ-131_LOW, MQ-135, MQ-136, MQ-137, MQ-138, MQ-214, MQ-216, MQ303A, MQ303B, MQ306A, MQ307A, MQ309A). Instead of sensor-specific calibration, it uses gas-specific reference percentages, enabling more accurate ppm calculations. Key features include automatic calculation of 'a' and 'b' coefficients via logarithmic regression; temperature and humidity compensation using a correction coefficient model; analytical and manual calibration support for unsupported MQ models; a JavaScript-based implementation for hardware-free testing and computation; 3D ppm concentration graph simulation; and Python-based 4D ppm slope estimation platform for advanced data analysis.
 category=Sensors
 url=https://github.com/abcdaaaaaaaaa/MQDataScience
 architectures=*
 license=MIT
+
 
 
 
